--- a/LbsGameAwards/LbsGameAwards/LbsGameAwards/LbsGameAwards.csproj
+++ b/LbsGameAwards/LbsGameAwards/LbsGameAwards/LbsGameAwards.csproj
@@ -75,7 +75,10 @@
     <Reference Include="System.Net" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Enemy.cs" />
+    <Compile Include="Explosion.cs" />
     <Compile Include="GameObject.cs" />
+    <Compile Include="Gib.cs" />
     <Compile Include="Player.cs" />
     <Compile Include="Projectile.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
