Globals, enemy movment fixed, enemy dies

--- a/LbsGameAwards/LbsGameAwards/LbsGameAwards/LbsGameAwards.csproj
+++ b/LbsGameAwards/LbsGameAwards/LbsGameAwards/LbsGameAwards.csproj
@@ -79,6 +79,7 @@
     <Compile Include="Explosion.cs" />
     <Compile Include="GameObject.cs" />
     <Compile Include="Gib.cs" />
+    <Compile Include="Globals.cs" />
     <Compile Include="Player.cs" />
     <Compile Include="Projectile.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
