--- a/LbsGameAwards/LbsGameAwards/LbsGameAwards/LbsGameAwards.csproj
+++ b/LbsGameAwards/LbsGameAwards/LbsGameAwards/LbsGameAwards.csproj
@@ -80,12 +80,16 @@
     <Compile Include="GameObject.cs" />
     <Compile Include="Gib.cs" />
     <Compile Include="Globals.cs" />
+    <Compile Include="Loot.cs" />
+    <Compile Include="Particle.cs" />
     <Compile Include="Player.cs" />
+    <Compile Include="PowerUp.cs" />
     <Compile Include="Projectile.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Game1.cs" />
     <Compile Include="Room.cs" />
+    <Compile Include="TextEffect.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Game.ico" />
