--- a/LbsGameAwards/LbsGameAwards/LbsGameAwards/LbsGameAwards.csproj
+++ b/LbsGameAwards/LbsGameAwards/LbsGameAwards/LbsGameAwards.csproj
@@ -75,6 +75,7 @@
     <Reference Include="System.Net" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Door.cs" />
     <Compile Include="Enemy.cs" />
     <Compile Include="Explosion.cs" />
     <Compile Include="GameObject.cs" />
