Power-ups, loot and spawn manage

--- a/LbsGameAwards/LbsGameAwards/LbsGameAwards/LbsGameAwards.csproj
+++ b/LbsGameAwards/LbsGameAwards/LbsGameAwards/LbsGameAwards.csproj
@@ -90,6 +90,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Game1.cs" />
     <Compile Include="Room.cs" />
+    <Compile Include="SpawnManager.cs" />
     <Compile Include="TextEffect.cs" />
     <Compile Include="Ui.cs" />
   </ItemGroup>
