--- a/LbsGameAwards/LbsGameAwards/LbsGameAwards/LbsGameAwards.csproj
+++ b/LbsGameAwards/LbsGameAwards/LbsGameAwards/LbsGameAwards.csproj
@@ -82,6 +82,7 @@
     <Compile Include="Gib.cs" />
     <Compile Include="Globals.cs" />
     <Compile Include="Loot.cs" />
+    <Compile Include="MiniMap.cs" />
     <Compile Include="Particle.cs" />
     <Compile Include="Player.cs" />
     <Compile Include="PowerUp.cs" />
