--- a/LbsGameAwards/LbsGameAwards/LbsGameAwards/LbsGameAwards.csproj
+++ b/LbsGameAwards/LbsGameAwards/LbsGameAwards/LbsGameAwards.csproj
@@ -81,6 +81,7 @@
     <Compile Include="GameObject.cs" />
     <Compile Include="Gib.cs" />
     <Compile Include="Globals.cs" />
+    <Compile Include="Helper.cs" />
     <Compile Include="Loot.cs" />
     <Compile Include="MiniMap.cs" />
     <Compile Include="Particle.cs" />
@@ -91,6 +92,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Game1.cs" />
     <Compile Include="Room.cs" />
+    <Compile Include="SoundManager.cs" />
     <Compile Include="SpawnManager.cs" />
     <Compile Include="TextEffect.cs" />
     <Compile Include="Ui.cs" />
